--- a/mc2/src/main/resources/application.yml
+++ b/mc2/src/main/resources/application.yml
@@ -21,3 +21,5 @@ spring:
       poll-timeout: 1800000
       concurrency: 1
       ack-mode: manual_immediate
+
+application.jaeger.serviceName: mc2
