--- a/mc3/pom.xml
+++ b/mc3/pom.xml
@@ -56,6 +56,23 @@
 			<version>2.10.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.opentracing</groupId>
+			<artifactId>opentracing-api</artifactId>
+			<version>0.31.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.opentracing.contrib</groupId>
+			<artifactId>opentracing-spring-cloud-starter</artifactId>
+			<version>0.1.13</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jaegertracing</groupId>
+			<artifactId>jaeger-client</artifactId>
+			<version>0.31.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
