mc1 and mc2 now communicate via websockets

--- a/mc2/src/main/resources/application.yml
+++ b/mc2/src/main/resources/application.yml
@@ -22,4 +22,6 @@ spring:
       concurrency: 1
       ack-mode: manual_immediate
 
-application.jaeger.serviceName: mc2
+application:
+  jaeger.serviceName: mc2
+  broker.relay.host: localhost
