--- a/mc1/src/main/resources/application.yml
+++ b/mc1/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 server.port: 9000
 
 application:
-  mc2Endpoint: "http://mc2:9010/mc2/communication"
   sendingIntervalInSecs: 3
   jaeger.serviceName: mc1
+  websocket:
+    mc2Endpoint: ws://mc2:9010/chat
+    topicName: /topic/messages
+    destination: /app/chat/java
 
 spring.datasource:
   url: jdbc:mariadb://maria_db:3306/invite_test_task
